Recompile to Java 8 for compatibility