@@ -9,8 +9,8 @@ import ai.knowly.langtorch.store.vectordb.integration.pinecone.schema.dto.query.
 import ai.knowly.langtorch.store.vectordb.integration.pinecone.schema.dto.upsert.UpsertRequest;
 import ai.knowly.langtorch.store.vectordb.integration.pinecone.schema.dto.upsert.UpsertResponse;
 import ai.knowly.langtorch.utils.ApiKeyUtils;
-import java.util.List;
-import java.util.Map;
+import com.google.common.collect.ImmutableMap;
+import java.util.Arrays;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.condition.EnabledIf;
 
@@ -30,18 +30,18 @@ final class QueryTest {
     UpsertRequest upsertRequest =
         UpsertRequest.builder()
             .setVectors(
-                List.of(
+                Arrays.asList(
                     Vector.builder()
                         .setId("test2")
-                        .setValues(List.of(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8))
-                        .setMetadata(Map.of("key", "val"))
+                        .setValues(Arrays.asList(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8))
+                        .setMetadata(ImmutableMap.of("key", "val"))
                         .build()))
             .setNamespace("namespace")
             .build();
 
     QueryRequest queryRequest =
         QueryRequest.builder()
-            .setVector(List.of(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8))
+            .setVector(Arrays.asList(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8))
             .setTopK(3)
             .setNamespace("namespace")
             .setIncludeValues(true)
